--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,5 +1,5 @@
-@import '~vue-snotify/styles/material';
-@import './highlight.scss';
+@import './snotify/material';
+@import './highlight';
 @import './animations';
 @import './themes/default';
 @import './themes/bright';
