--- a/src/assets/scss/themes/bright.scss
+++ b/src/assets/scss/themes/bright.scss
@@ -1,9 +1,9 @@
 :root[theme='bright'] {
-  --dark-primary-color: #303f9f;
-  --light-primary-color: #c5cae9;
+  --dark-primary-color: #1762d3;
+  --light-primary-color: #aec7f7;
   --primary-color: #3f51b5;
   --text: #ffffff;
-  --accent-color: #154ba8;
+  --accent-color: #1154c7;
   --primary-text: #212121;
   --secondary-text: #757575;
   --devider-color: #bdbdbd;
