--- a/src/assets/scss/themes/bright.scss
+++ b/src/assets/scss/themes/bright.scss
@@ -1,11 +1,11 @@
 // bright theme
 
 :root[theme='bright'] {
-  --dark-primary-color: #1762d3;
-  --light-primary-color: #aec7f7;
+  --dark-primary-color: #286cd1;
+  --light-primary-color: #cbe3ff;
   --primary-color: #3f51b5;
   --text: #ffffff;
-  --accent-color: #1154c7;
+  --accent-color: #488bff;
   --primary-text: #212121;
   --secondary-text: #757575;
   --devider-color: #bdbdbd;
